<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">just caffe</string>
    <string name="input_name">Name</string>
    <string name="name">Name</string>
    <string name="Topping">Topping</string>
    <string name="ice_cream">Ice Cream</string>
    <string name="yogurt">Yogurt</string>
    <string name="adding">Adding</string>
    <string name="milk">Milk</string>
    <string name="chocolate">Chocolate</string>
    <string name="price">Price</string>
    <string name="order">Order</string>
    <string name="price_result">
        $ <xliff:g id="price_number" example="0">%1$s</xliff:g>
    </string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="quantity_number">0</string>
    <string name="submit">Submit</string>
</resources>
