<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".MainActivity">

    <android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
                                                android:layout_height="match_parent">

        <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                      android:layout_height="match_parent"
                                                      android:orientation="vertical"
                                                      android:layout_margin="16sp">

            <android.support.v7.widget.AppCompatTextView android:layout_width="wrap_content"
                                                         android:layout_height="wrap_content"
                                                         android:text="@string/name"/>

            <android.support.v7.widget.AppCompatEditText android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:inputType="text"
                                                         android:id="@+id/customer_name_edit_text"/>

            <android.support.v7.widget.AppCompatTextView android:layout_width="wrap_content"
                                                         android:layout_height="wrap_content"
                                                         android:text="@string/adding"/>
            <android.support.v7.widget.AppCompatCheckBox android:layout_width="match_parent"
                                                         android:layout_height="match_parent"
                                                         android:id="@+id/milk_check_box"
                                                         android:text="@string/milk"/>

            <android.support.v7.widget.AppCompatCheckBox android:layout_width="wrap_content"
                                                         android:layout_height="wrap_content"
                                                         android:id="@+id/chocolate_check_box"
                                                         android:text="@string/chocolate"/>

            <android.support.v7.widget.AppCompatTextView android:layout_width="wrap_content"
                                                         android:layout_height="wrap_content"
                                                         android:text="@string/Topping"/>
            <android.support.v7.widget.AppCompatCheckBox android:layout_width="wrap_content"
                                                         android:layout_height="wrap_content"
                                                         android:id="@+id/ice_cream_check_box"
                                                         android:text="@string/ice_cream"/>

            <android.support.v7.widget.AppCompatCheckBox android:layout_width="wrap_content"
                                                         android:layout_height="wrap_content"
                                                         android:id="@+id/yogurt_check_box"
                                                         android:text="@string/yogurt"/>

            <android.support.v7.widget.AppCompatTextView android:layout_width="wrap_content"
                                                         android:layout_height="wrap_content"
                                                         android:text="@string/quantity"/>
            <android.support.v7.widget.LinearLayoutCompat android:layout_width="wrap_content"
                                                          android:layout_height="wrap_content"
                                                          android:orientation="horizontal">
                <android.support.v7.widget.AppCompatButton android:layout_width="wrap_content"
                                                           android:layout_height="wrap_content"
                                                           android:id="@+id/quantity_plus_button"
                                                           android:text="@string/plus"/>
                <android.support.v7.widget.AppCompatTextView android:layout_width="wrap_content"
                                                             android:layout_height="wrap_content"
                                                             android:id="@+id/quantity_text_view"
                                                             android:layout_margin="5sp"
                                                             android:text="@string/quantity_number"/>
                <android.support.v7.widget.AppCompatButton android:layout_width="wrap_content"
                                                           android:layout_height="wrap_content"
                                                           android:id="@+id/quantity_minus_button"
                                                           android:text="@string/minus"/>
            </android.support.v7.widget.LinearLayoutCompat>
            <android.support.v7.widget.AppCompatTextView android:layout_width="wrap_content"
                                                         android:layout_height="wrap_content"
                                                         android:text="@string/price"/>
            <android.support.v7.widget.AppCompatTextView android:layout_width="wrap_content"
                                                         android:layout_height="wrap_content"
                                                         android:text="@string/price_result"
                                                         android:id="@+id/price_result_text_view"/>
            <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"

                                                          android:layout_height="match_parent"
                                                          android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton android:layout_width="wrap_content"
                                                           android:layout_height="wrap_content"
                                                           android:id="@+id/submit_button"
                                                           android:text="@string/submit"/>
                <android.support.v7.widget.AppCompatButton android:layout_width="wrap_content"
                                                           android:layout_height="wrap_content"
                                                           android:id="@+id/order_button"
                                                           android:text="@string/order"/>
            </android.support.v7.widget.LinearLayoutCompat>
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>